--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,12 @@
 services:
   - type: web
     name: ftdiam
-    env: static
-    buildCommand: npm install --legacy-peer-deps && npm run build
+    env: node
+    buildCommand: npm run build
+    startCommand: npm start
+    envVars:
+      - key: NODE_ENV
+        value: production
     staticPublishPath: ./dist
     pullRequestPreviewsEnabled: true
     headers:
