--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,10 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
+    disk:
+      name: data
+      mountPath: /data
+      sizeGB: 1
     staticPublishPath: ./dist
     pullRequestPreviewsEnabled: true
     headers:
